Added link to projects

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ analytics:
 author:
   name             : "Sanya Bathla Taneja"
   avatar           : "profile.jpeg"
-  bio              : "MS Intelligent Systems, University of Pittsburgh"
+  bio              : "MS Intelligent Systems University of Pittsburgh"
   location         : "Pittsburgh, PA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=rWJ8yl0AAAAJ&hl=en"
