--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ repository               : "sanyabt.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : true
+future                   : false
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
@@ -110,6 +110,7 @@ author:
 include:
   - .htaccess
   - _pages
+  - _posts
   - files
 exclude:
   - "*.sublime-project"
