--- a/_config.yml
+++ b/_config.yml
@@ -71,12 +71,12 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yang Wang"
+  name             : "<center>Yang Wang</center>"
   avatar           : "profile.jpeg"
   bio              : "Ph.D. student in Information Science "
   location         : "Pittsburgh, PA"
   employer         : "University of Pittsburgh"
-  googlescholar    : ""
+  googlescholar    : 
   email            : "yaw70@pitt.edu"
   researchgate     :
   uri              :
@@ -91,7 +91,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : ""
+  linkedin         : 
   orcid            :
   pinterest        :
   soundcloud       :
