--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ analytics:
 author:
   name             : "<center>Yang Wang</center>"
   avatar           : "profile.jpeg"
-  bio              : "Ph.D. student in Information Science "
+  bio              : "<center>Ph.D. student in Information Science</center>"
   location         : "Pittsburgh, PA"
   employer         : "University of Pittsburgh"
   googlescholar    : 
